--- a/Statistical_Rethinking_Homework_Chapter_4.ipynb
+++ b/Statistical_Rethinking_Homework_Chapter_4.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "library(rethinking)"
@@ -570,7 +572,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "log.model<-map(\n",
@@ -713,7 +717,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.3.1"
+   "version": "3.4.2"
   }
  },
  "nbformat": 4,
