Add chapter7 code examples

--- a/Statistical_Rethinking_Homework_Chapter_6.ipynb
+++ b/Statistical_Rethinking_Homework_Chapter_6.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "library(rethinking) \n",
@@ -39,7 +41,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Model.1 <- map( \n",
@@ -977,7 +981,9 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Model.6.H.6 <- map( \n",
@@ -1084,8 +1090,7 @@
     "age.seq<-seq(from=min(d1$age),to=max(d1$age), length.out= 1e3)\n",
     "d.predict <- list(\n",
     "    height = rep(0,1e3), # empty outcome\n",
-    "    age = age.seq\n",
-    ")\n",
+    "    age = age.seq)\n",
     "\n",
     "pred.m6H6 <- link( Model.6.H.6 , data=d.predict )\n",
     "mu.m6H6 <- apply( pred.m6H6 , 2 , mean )\n",
